--- a/privaci.html
+++ b/privaci.html
@@ -1,59 +1,35 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Política de Privacidad - Arley4d Bypass</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      max-width: 800px;
-      margin: 40px auto;
-      padding: 20px;
-      background-color: #f4f4f4;
-      color: #333;
-    }
-    h1, h2 {
-      color: #c40000;
-    }
-    a {
-      color: #0066cc;
-    }
-  </style>
-</head>
-<body>
-  <h1>Política de Privacidad</h1>
-  <p><strong>Última actualización:</strong> 29 de marzo de 2025</p>
+📜 Política de Privacidad para la App "Arley4d Bypass"
 
-  <h2>1. Recopilación de Información</h2>
-  <p>La aplicación <strong>Arley4d Bypass</strong> no recopila, almacena ni comparte información personal del usuario. No solicitamos nombre, correo electrónico ni ningún dato identificable.</p>
+Última actualización: 29 de marzo de 2025
+1. Recopilación de Información
 
-  <h2>2. Permisos de la Aplicación</h2>
-  <p>La app puede solicitar ciertos permisos para su funcionamiento:</p>
-  <ul>
-    <li><strong>Almacenamiento:</strong> para guardar o leer archivos que el usuario descarga o utiliza.</li>
-    <li><strong>Acceso a Internet:</strong> para realizar descargas desde servidores o enlaces indicados por el usuario.</li>
-    <li><strong>Gestión de Archivos (Android 11+):</strong> para permitir el acceso a carpetas necesarias del almacenamiento.</li>
-  </ul>
-  <p>Estos permisos no se usan para recopilar datos personales ni se comparten con terceros.</p>
+La aplicación Arley4d Bypass NO recopila, almacena ni comparte información personal del usuario. No solicitamos nombre, correo electrónico, número de teléfono ni ningún otro dato identificable.
+2. Permisos de la Aplicación
 
-  <h2>3. Publicidad y Analítica</h2>
-  <p>La aplicación <strong>no contiene publicidad</strong> ni utiliza herramientas de análisis como Google Analytics o Firebase.</p>
+La app puede solicitar ciertos permisos del sistema, únicamente para su funcionamiento:
 
-  <h2>4. Uso de Archivos Externos</h2>
-  <p>La app puede acceder a enlaces externos (como FTP o 1fichier) según lo configurado por el usuario. Esta actividad se realiza localmente y bajo la responsabilidad del usuario.</p>
+    Almacenamiento: para guardar o leer archivos que el usuario descarga o utiliza.
 
-  <h2>5. Seguridad</h2>
-  <p>La aplicación no almacena información sensible ni transmite datos privados.</p>
+    Acceso a Internet: para realizar descargas desde servidores o sitios web, según instrucciones del usuario.
 
-  <h2>6. Cambios a esta Política</h2>
-  <p>Podemos actualizar esta política en el futuro. Los cambios se reflejarán en esta misma página.</p>
+    Gestión de archivos (Android 11+): para que el usuario pueda acceder a carpetas necesarias dentro del almacenamiento.
 
-  <h2>7. Contacto</h2>
-  <p>Si tienes preguntas o inquietudes, puedes escribirnos a:</p>
-  <ul>
-    <li>📧 <a href="mailto:RomsServer@gmail.com">RomsServer@gmail.com</a></li>
-    <li>🌐 <a href="https://arley4d.com" target="_blank">https://arley4d.com</a></li>
-  </ul>
-</body>
-</html>
+Estos permisos no se usan para recopilar datos personales ni compartir información con terceros.
+3. Publicidad y Analítica
+
+La aplicación no contiene publicidad de terceros ni servicios de analítica. No usamos Google Analytics, Firebase, ni ningún sistema que rastree el comportamiento del usuario.
+4. Uso de Archivos Externos
+
+La app puede interactuar con archivos ubicados en servicios externos como servidores FTP, 1fichier, u otros, según lo configurado por el propio usuario. Esta interacción ocurre localmente y no implica la recolección de datos.
+5. Seguridad
+
+La aplicación no almacena datos sensibles y no transmite información privada. Toda la actividad ocurre bajo la responsabilidad del usuario final.
+6. Cambios a esta Política
+
+Nos reservamos el derecho de actualizar esta política en el futuro. Cualquier cambio será reflejado en esta misma página.
+7. Contacto
+
+Si tienes preguntas o inquietudes, puedes escribirnos a:
+
+📧 RomsServer@hotmail.com
+🌐 https://arley4d.com
